# rag-pipeline-v3

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
config/: config.toml
interfaces_app/gradio_app/: app.py  formatters.py
interfaces_app/gradio_app/tabs/: debug_tab.py  ingest_tab.py  query_tab.py
scripts/: build_golden_dataset.py  download_models.py  ingest_pdfs.py  run_eval.py  run_garak.py
src/rag_pipeline/: prompts.py
src/rag_pipeline/adapters/chunking/: semantic_chunker.py
src/rag_pipeline/adapters/compression/: sentence_compressor.py
src/rag_pipeline/adapters/contextualization/: fastcoref_resolver.py
src/rag_pipeline/adapters/memory/: redis_memory.py
src/rag_pipeline/adapters/pii/: presidio_adapter.py
src/rag_pipeline/adapters/reranking/: cross_encoder_reranker.py
src/rag_pipeline/adapters/retrieval/: bm25_retriever.py  chroma_retriever.py  circuit_breaker.py  hybrid_retriever.py  ledger.py
src/rag_pipeline/adapters/routing/: zero_shot_classifier.py
src/rag_pipeline/adapters/safety/: composite_gate.py  llamaguard_gate.py  promptguard_gate.py
src/rag_pipeline/adapters/synthesis/: nim_synthesizer.py
src/rag_pipeline/adapters/tracing/: langfuse_observer.py  opensmith_observer.py  traced_decorator.py
src/rag_pipeline/adapters/verification/: nli_verifier.py
src/rag_pipeline/config/: settings.py
src/rag_pipeline/core/: exceptions.py  initializer.py  models.py
src/rag_pipeline/factories/: component_factory.py
src/rag_pipeline/utils/: citation_parser.py  logging.py  model_loading.py  model_registry.py
(+3 files in other folders)
