[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Production-grade RAG pipeline with deterministic synthesis, multi-layer hallucination defense, and full observability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "gradio>=5.0",
    "pypdf>=4.0",
    "numpy>=1.24",
    "tomli>=2.4.1",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
    "sentencepiece>=0.2.2",
    "torch>=2.0",
    "transformers>=4.36",
    "requests>=2.31",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/", "src/utils/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["rag_pipeline*", "interfaces_app*"]
